force-app/main/default/objects/KimbleOne__MenuItem__c/KimbleOne__MenuItem__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Menu Item</label>
    <nameField>
        <label>Menu Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu Items</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>