force-app/main/default/objects/KimbleOne__MenuItem__c/fields/KimbleOne__ContextType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContextType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Obsolete - Context Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ContextType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>MenuItems</relationshipName>
    <type>Lookup</type>
</CustomField>