force-app/main/default/objects/KimbleOne__MenuItem__c/fields/KimbleOne__FilterContext__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FilterContext__c</fullName>
    <label>Filter Context</label>
    <length>50</length>
    <type>Text</type>
</CustomField>