force-app/main/default/objects/KimbleOne__MenuItem__c/fields/KimbleOne__FormattedNodeName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FormattedNodeName__c</fullName>
    <label>Formatted Node Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>