force-app/main/default/objects/KimbleOne__MenuItem__c/fields/KimbleOne__IsActive__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>