force-app/main/default/objects/KimbleOne__MenuItem__c/fields/KimbleOne__Menu__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Menu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Menu</label>
    <referenceTo>KimbleOne__Menu__c</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>MenuItems</relationshipName>
    <type>Lookup</type>
</CustomField>