force-app/main/default/objects/KimbleOne__MenuItem__c/fields/KimbleOne__MenuCommand__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MenuCommand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Menu Command</label>
    <referenceTo>KimbleOne__MenuCommand__c</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>MenuItems</relationshipName>
    <type>Lookup</type>
</CustomField>