force-app/main/default/objects/KimbleOne__MenuItem__c/fields/KimbleOne__MenuItemType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MenuItemType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Menu Item Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>MenuItemType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Menu Items (Menu Item Type)</relationshipLabel>
    <relationshipName>MenuItemsMenuItemType</relationshipName>
    <type>Lookup</type>
</CustomField>