force-app/main/default/objects/KimbleOne__MenuItem__c/fields/KimbleOne__ObjectSource__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ObjectSource__c</fullName>
    <label>Object Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>