force-app/main/default/objects/KimbleOne__MenuItem__c/fields/KimbleOne__RenderedSource__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RenderedSource__c</fullName>
    <label>Z_Obsolete - Rendered Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>