force-app/main/default/objects/KimbleOne__MenuItem__c/fields/KimbleOne__Sequence__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>