force-app/main/default/objects/KimbleOne__MenuItem__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Menu__c</columns>
    <columns>KimbleOne__MenuItemType__c</columns>
    <columns>KimbleOne__MenuCommand__c</columns>
    <columns>KimbleOne__FormattedNodeName__c</columns>
    <columns>KimbleOne__ObjectSource__c</columns>
    <columns>KimbleOne__MenuItem__c</columns>
    <columns>KimbleOne__FilterContext__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>